--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="js/resources.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/engine.js"></script>
+	<script src="js/resources.js"></script>
+	<script src="js/enemy.js"></script>
+	<script src="js/gem.js"></script>
+	<script src="js/player.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/gameRules.js"></script>
+	<script src="js/selectPlayer.js"></script>
+	<script src="js/events.js"></script>
+	<script src="js/engine.js"></script>
 </body>
 </html>
